testsuite/tests/typecheck/should_fail/T10715.stderr

T10715.hs:9:13: error:
    Couldn't match representation of type ‘a’ with that of ‘X a’
    ‘a’ is a rigid type variable bound by
      the type signature for:
        doCoerce :: forall a. Coercible a (X a) => a -> X a
      at T10715.hs:9:13
    Inaccessible code in
      the type signature for:
        doCoerce :: Coercible a (X a) => a -> X a
    In the ambiguity check for ‘doCoerce’
    To defer the ambiguity check to use sites, enable AllowAmbiguousTypes
    In the type signature:
      doCoerce :: Coercible a (X a) => a -> X a
